# Conferences

.github/workflows/: c-cpp.yml
ADC19/src/: Dockerfile  test.cpp
ADC19/src/src/: CMakeLists.txt  test.cpp
ADC20/Src/: CI.yml  CMakeLists.txt  Dockerfile  Dockerfile.gcc  Dockerfile.vckgp  readme.md
ADC20/Src/src/: main.cpp
ADC20/Src/src_depend/: main.cpp
DWX19/src/: DWXEventHubTrigger_Block.cs  dwx.code-workspace  truffle-config.js
DWX19/src/Contracts/: DWXTickets.sol  dwx19.json  myPostBox.sol
DWX19/src/Tests/: Test.sol
DWX19/src/generatedAzureFunction/DWXTickets/Service/: AskingPrice.cs  Blockchain.cs  Description.cs  InstanceBuyer.cs  InstanceOwner.cs  OfferPrice.cs
DWX19/src/generatedAzureFunction/myPostBox/Service/: Blockchain.cs  getCount.cs  getMsg.cs
DWX19/src/generatedLogicApp/myPostBox/Data/: Posted.sql  event.Posted.logicapp.json
